--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Blog server using Apollo GraphQL and PostgreSQL",
   "main": "src/server.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "start": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/AbdulhakimZatar/blog_server#readme",
   "dependencies": {
     "apollo-server": "^3.9.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "pg": "^8.7.3"
